-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.811 2010-11-01 22:28:55 guru Exp $
-----------------------------------------------------------------------------------------

-----------------------------------------------------------------------------------------
2010-11-01	pwessel
	* GMT 4.5.4 finalized and released. GMT 5.0.0alpha announced, get via cvs
-----------------------------------------------------------------------------------------
2010-11-01	pwessel
	* Missing html:		gmt_shell_functions, gmtcolors, gmtget, gmtlogo
				img2google, isogmt, psbbox, sphdistance
				sphinterpolate, sphtriangulate, x2sys_merge
	
2010-10-29	pwessel
	* ex??/job??.[c]sh:	Many used awk instead of $AWK

2010-10-28	pwessel
	* gmt_init.c:		Could not use @:<size>: and @:: in -B strings as the colons
				interfered with the :label: parsing.  Now fixed.

2010-10-27	pwessel
	* psmask.c:		Did not update internal clip level (if -T not used) do could
				not warn if clipping had not been properly terminated.

2010-10-26	pwessel
	* mapproject.c:		When -L is used with -fg and an ellipsoid we convert lats
				to geocentric lats before doing spherical trig, then
				convert back to geodetic coordinates.

2010-10-24	jluis
	* gmtdefaults:		Still had one free() that should be GMT_free (Win crash)

2010-10-19	pwessel
	* gmtswitch:		Given D it picks the first entry in .gmtversions. Also
				is now installed with rest of scripts and executables.
	* mapproject.c		Did not show/explain the option of appending + to -L.
				Corrected synopsis, usage, and man page.

2010-10-17	pwessel
	* grdpaste.c:		Lacked -fg so could not paste 352/360 and 0/8 in longitudes.

2010-10-14	pwessel
	* psbasemap.c:		The -L option had trouble parsing if there were + signs
				in the label string.
	* pscoast.c:		---"---
	
2010-10-13	pwessel
	* mapproject.c:		Did not reset azimuth to NaN at start of next segment.