@@ -1,0 +1,23 @@
+Dear GMT user-
+
+We are pleased to announce the release of GMT version 4.5.5 (a
+troubled 4.5.4 had some issued that needed an immediate update).
+This stable release mostly fixes several bugs and is recommended
+for all GMT users.  For a complete list of enhancements and
+features, please see Chapter 1 in the Technical Reference
+& Cookbook or follow the RELEASES link on the updated GMT web page
+(http://gmt.soest.hawaii.edu).
+
+As of today, all but the Japan, European (2), and S Africa mirror
+ftp servers are now synced up; we hope those four will follow
+within 24 hours.  Alternatively, OS X users will find GMT 4.5.5
+in Fink's 'unstable' tree.
+
+Concurrently we are making available, via cvs access, an alpha
+version of GMT5, the next generation of GMT.  For more information
+about GMT 5 and who should consider trying it out, please visit
+gmt.soest.hawaii.edu/5.
+
+Sincerely,
+
+The GMT Team
