@@ -1,5 +1,5 @@
 %------------------------------------------
-%	$Id: GMT_Chapter_1.tex,v 1.158 2010-10-28 21:48:43 guru Exp $
+%	$Id: GMT_Chapter_1.tex,v 1.159 2010-11-01 23:10:43 guru Exp $
 %
 %	The GMT Documentation Project
 %	Copyright 2000-2010.
@@ -28,15 +28,16 @@ Please send your comments to
 \section{What is new in \gmt\ 4.x?}
 
 \GMT\ 4.x will continue to see corrections of legacy bugs and problems, including Windows DLL silliness.
-However, the \GMT\ 4.5.4 release is mostly bug-fixes as all development is now focussed on \GMT\ 5; this
+However, the \GMT\ 4.5.5 release is mostly bug-fixes as all development is now focussed on \GMT\ 5; this
 new series is distinguished by being completely restructured so as to allow developers to call
 high-level \GMT\ processes from a variety of programming environments.  Below is a brief
 history of the development milestones in the 4.x series.  We expect to maintain the \GMT 4 series
 for some time after \GMT 5 has been released.
 
-\subsection{Overview of \gmt\ 4.5.4 [Nov-1, 2010]}
+\subsection{Overview of \gmt\ 4.5.5 [Nov-1, 2010]}
 
 This is again mostly a bug-fix release, and coincides with the availability of \GMT\ 5.0.0$\alpha$.
+Due to a few issues we had an aborted update to 4.5.4 that was never announced; hence the 4.5.5-numbered version.
 A few minor improvements have been added:
 
 \begin{enumerate}
