@@ -1,11 +1,11 @@
 <HTML>
-<!--  $Id: gmt_arrrghh.html,v 1.30 2010-10-27 22:10:19 guru Exp $  -->
+<!--  $Id: gmt_arrrghh.html,v 1.31 2010-11-01 23:10:43 guru Exp $  -->
 <TITLE>GMT Incompatibilities Notes</title>
 <BODY bgcolor="#ffffff">
 <CENTER><H2>GMT Incompatibilities Notes</CENTER></H2><P>
 <HR>
-<H3><CENTER>1-NOV-2010: GMT Version 4.5.4 Released</H3></CENTER>
-4.5.4 scripts should be fully backward compatible with 4.5.3.  For a list of all the new
+<H3><CENTER>1-NOV-2010: GMT Version 4.5.5 Released</H3></CENTER>
+4.5.5 scripts should be fully backward compatible with 4.5.3.  For a list of all the new
 capabilities and enhancements, see the <A HREF="gmt_releases.html">RELEASES</A>
 page.
 <HR>
